# ollama_translator

./: Cargo.toml  LICENSE  README.md
examples/basic/: main.rs
src/: lib.rs
